--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@ It is a long established fact that a reader will be distracted by the readable c
 <footer>
  <p>Copyright &copy; 2021 by deyaa pozan</p> 
 </footer>
-
+<script src="javascript/app.js"></script>
 </body>
 </html>
